Add pin emoji to Pinned Posts header

--- a/_layouts/home-pinned.html
+++ b/_layouts/home-pinned.html
@@ -4,7 +4,7 @@ layout: archive
 
 {{ content }}
 
-<h3 class="archive__subtitle">{{ "Pinned Posts" }}</h3>
+<h3 class="archive__subtitle">{{ "Pinned Posts 📌" }}</h3>
 
 {% for post in site.categories.pinned %}
   {% include archive-single.html %}
