--- a/_includes/project-gallery.html
+++ b/_includes/project-gallery.html
@@ -8,15 +8,9 @@
 <ul id="rig">
 	{% if project-gallery.links %}
       {% for link in project-gallery %}
-	    <li>
-		  <a class="rig-cell" href="{{ link.url | default: # }}">
-		    <img class="rig-img" src="{{ link.image }}">
-			  <span class="rig-overlay"></span>
-			  {% if link.text %}
-			    <span class="rig-text">{{ link.text | markdownify }}</span>
-			  {% endif %}
-		  </a>
-	    </li>
+        {% if link.image %}
+          <li><a class="rig-cell" href="{{ link.url | default: # }}"><img class="rig-img" src="{{ link.image }}"><span class="rig-overlay"></span>{% if link.text %}<span class="rig-text">{{ link.text | markdownify }}</span>{% endif %}</a></li>
+        {% endif %}
       {% endfor %}
     {% endif %}
 </ul>
